Hopefully fix pan editing when combined with cropping.

--- a/resources/main.scss
+++ b/resources/main.scss
@@ -2940,6 +2940,12 @@ svg.heart-image .delete {
     width: 100%;
     height: 100%;
 
+    .pan-editor-crop-region {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
     .monitor-preview-box {
         position: absolute;
         top: 0;
